# wheelbots

./: .gitignore  .gitmodules  README.md  ROS2-V2.0(humble) Common Commands.txt  bitbucket-pipelines.yml
core/ros2_astra_camera/: README.MD
core/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml  wheeltec_udev.sh
core/turn_on_wheeltec_robot/config/: ekf.yaml
core/turn_on_wheeltec_robot/launch/: base_serial.launch.py  robot_mode_description.launch.py  turn_on_wheeltec_robot.launch.py  wheeltec_camera.launch.py  wheeltec_lidar.launch.py
core/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
core/wheeltec_lidar_ros2/: README.txt
core/wheeltec_lidar_ros2/lslidar_ros/: README.md  README_en.md
docker/: Dockerfile
manipulation/stepper_arm/: CMakeLists.txt  package.xml
manipulation/stepper_arm/include/stepper_arm/: arm_control.h  keyboard_control.h
manipulation/stepper_arm/src/: arm_control.cpp  keyboard_control.cpp
mapping/wheeltec_robot_rtab/launch/: wheeltec_slam_rtab.launch.py
mapping/wheeltec_slam_toolbox/: CMakeLists.txt
navigation/simple_follower_ros2/launch/: line_follower.launch.py  visual_follower.launch.py
navigation/simple_follower_ros2/simple_follower_ros2/: line_follow.py  visualTracker.py
navigation/wheeltec_robot_nav2/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  save_map.launch.py  wheeltec_nav2.launch.py
navigation/wheeltec_robot_nav2/map/: WHEELTEC.pgm
navigation/wheeltec_robot_rrt2/: package.xml
rosbot_common_msgs/: CMakeLists.txt  package.xml
utils/wheeltec_robot_keyboard/: setup.cfg
utils/wheeltec_rviz2/rviz/: wheeltec.rviz
(+20 files in other folders)
